      - 'linksearch' has been removed.  The \l search modifier can
        still be used for this purpose. [b4]
      - 'loadplugins' is now a [regexplist] option rather than
        a boolean. [b2]
      - 'mapleader' is now an option rather than a :let
        variable. [b4]
      - 'passkeys' is now a [sitemap] with key chain support rather
        than a [regexpmap]. [b6]
      - 'showmode' is now a [regexplist]. [b6]
      - 'showstatuslinks' and 'showtabline' are now [string] options. [b4]
    • IMPORTANT: Command script files now use the *.penta file extension. [b2]
    • IMPORTANT: Plugins are now loaded from the 'plugins/'
      directory in 'runtimepath' rather than 'plugin/'. [b1]
    • Option changes:
      - Added [stringmap], [regexplist], and [regexpmap] option
        types. [b1]
      - Added [sitelist] and [sitemap] option types. [b6]
      - Added "bookmarks", "diverted", and "links" to 'activate'
        option. [b2]
      - Added 'altwildmode' and c_<A-Tab> command-line key binding. [b2]
      - Added 'autocomplete' option for specifying which completion
        groups should be auto-completed. [b2]
      - Added 'banghist' option. [b1]
      - Added 'cookies', 'cookieaccept', and 'cookielifetime' options. [b3]
      - Added 'downloadsort' option. [b7]
      - Replaced 'focuscontent' with 'strictfocus'. [b1]
      - Made 'strictfocus' a [sitemap]. [b7]
      - 'complete' now defaults to "slf" but file completion only
        triggers when the URL begins as above. [b1]
      - Added 'jumptags' option. [b7]
      - Added 's' flag to 'pageinfo' and changed default value. [b7]
      - Added 'passkeys' option. [b3]
      - Added 'passunknown' option. [b7]
      - Changed 'urlseparator' default value to "|". [b3]
      - Added "passwords" and "venkman" dialogs to :dialog. [b2]
      - Added 'spelllang' option. [b8]
      - Make 'showmode' a [stringlist] option. [b7]
      - Added 'wildanchor' option. [b2]