@@ -174,6 +174,7 @@
         variable. [b4]
       - 'passkeys' is now a [sitemap] with key chain support rather
         than a [regexpmap]. [b6]
+      - The precise format of 'sanitizeitems' has changed slightly. [b8]
       - 'showmode' is now a [regexplist]. [b6]
       - 'showstatuslinks' and 'showtabline' are now [string] options. [b4]
     • IMPORTANT: Command script files now use the *.penta file extension. [b2]
